# magnum_tests

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  rebuild  run_desktop  run_web  vimrc
src/: CMakeLists.txt  MyApplication.cpp  main.cpp
